# income_le_analysis

./: .Rprofile  .dockerignore  .gitignore  .lintr  Dockerfile  README.md  cty_cz_st_crosswalk_with_region.csv  pyproject.toml  region.r  requirements.r  strategy.md
.devcontainer/: Dockerfile  devcontainer.json  requirements.r
.devcontainer/zsh/: .zshrc  gitprompt.zsh  install.sh
.github/workflows/: deploy.yml  docker_build.yml
code/: init.r  main.r
code/add_industries/: add_naics_data_to_db.r  get_industry_data_cbp2001.r  map_dominant_industries_to_covariates.r  map_industries_to_counties.r
code/county/add_industries/: add_naics_data_to_db.r  convert_naics_codes_txt_to_csv.r  get_industry_data_cbp2001.r  map_dominant_industries_to_covariates.r  map_industries_to_counties.r
code/county/get_industries/: get_dominant_industry.r  naics_codes_txt_to_csv.r
code/county/industries/: convert_naics_codes_txt_to_csv.r  get_industry_data_cbp2001.r  map_dominant_industries_to_covariates.r  map_industries_to_counties.r
code/county/process_tables/: classes.r  cleanup_functions.r  county_covars_cleanup.r  pipelinescript.r  queries.r  run_pipeline.html  (+1 more)
code/db/: init_db.r
code/process_tables/: classes.r  cleanup_functions.r  pipelinescript.r  queries.r  run_pipeline.rmd
code/region/: assign_region.r
code/shinyapp/: app.R  app.r  custom.css  shiny.r
data/chetty_online_tables/: README.md  chetty_2016_le_income_etable_3.csv
data/derived_tables/: chetty_2016_covariate_names.csv
industries_bycounty/: getdominantindustry.r  naics_codes_txt_to_csv.r
(+8 files in other folders)
