[tool.poetry]
name = "income-le-analysis"
version = "0.1.0"
description = ""
authors = ["Jordan Taylor <jtaylor81284@hotmail.com>"]
readme = "README.md"
packages = [{include = "income_le_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.22.0"
geopandas = "^0.13.0"
plotnine = "^0.12.1"
folium = "^0.14.0"
streamlit-folium = "^0.11.1"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
